fix vite base path

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ✅ Favicon & manifest -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="manifest" href="./site.webmanifest" />
 
    <!-- Primary Meta Tags -->
 <title>Joe Capon | Freelance Web Developer</title>
@@ -18,14 +18,14 @@
 <meta property="og:url" content="https://www.joecapondesigns.com/" />
 <meta property="og:title" content="Joe Capon | Freelance Web Developer" />
 <meta property="og:description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
-<meta property="og:image" content="/assets/og-image.jpg" />
+<meta property="og:image" content="./assets/og-image.jpg" />
 
 <!-- Twitter / X -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:url" content="https://www.joecapondesigns.com/" />
 <meta name="twitter:title" content="Joe Capon | Freelance Web Developer" />
 <meta name="twitter:description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
-<meta name="twitter:image" content="/assets/og-image.jpg" />
+<meta name="twitter:image" content="./assets/og-image.jpg" />
 
 <!-- Other -->
 <meta name="robots" content="index, follow" />
@@ -52,6 +52,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/main.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
