Fix favicon path for Vercel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ✅ Favicon & manifest -->
-  <link rel="icon" type="image/png" href="..public//tab-icon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/tab-icon.png?v=4" />
+<link rel="icon" type="image/png" sizes="16x16" href="/tab-icon.png?v=4" />
+<link rel="apple-touch-icon" href="/tab-icon.png?v=4" />
+<link rel="shortcut icon" href="/tab-icon.png?v=4" />
+
     <link rel="manifest" href="./site.webmanifest" />
 
    <!-- Primary Meta Tags -->
