Added analytics link

--- a/index.html
+++ b/index.html
@@ -4,53 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-11530504754"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-11530504754');
+    </script>
+
     <!-- ✅ Favicon & manifest -->
-<link rel="icon" type="image/png" sizes="32x32" href="/tab-icon.png?v=4" />
-<link rel="icon" type="image/png" sizes="16x16" href="/tab-icon.png?v=4" />
-<link rel="apple-touch-icon" href="/tab-icon.png?v=4" />
-<link rel="shortcut icon" href="/tab-icon.png?v=4" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/tab-icon.png?v=4" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/tab-icon.png?v=4" />
+    <link rel="apple-touch-icon" href="/tab-icon.png?v=4" />
+    <link rel="shortcut icon" href="/tab-icon.png?v=4" />
 
     <link rel="manifest" href="./site.webmanifest" />
 
-   <!-- Primary Meta Tags -->
-<title>Joe Capon | Freelance Web Developer</title>
-<meta name="title" content="Joe Capon | Freelance Web Developer" />
-<meta name="description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
+    <!-- Primary Meta Tags -->
+    <title>Joe Capon | Freelance Web Developer</title>
+    <meta name="title" content="Joe Capon | Freelance Web Developer" />
+    <meta name="description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.joecapondesigns.com/" />
-<meta property="og:title" content="Joe Capon | Freelance Web Developer" />
-<meta property="og:description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
-<meta property="og:image" content="./assets/og-image.jpg" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.joecapondesigns.com/" />
+    <meta property="og:title" content="Joe Capon | Freelance Web Developer" />
+    <meta property="og:description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
+    <meta property="og:image" content="./assets/og-image.jpg" />
 
-<!-- Twitter / X -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:url" content="https://www.joecapondesigns.com/" />
-<meta name="twitter:title" content="Joe Capon | Freelance Web Developer" />
-<meta name="twitter:description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
-<meta name="twitter:image" content="./assets/og-image.jpg" />
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.joecapondesigns.com/" />
+    <meta name="twitter:title" content="Joe Capon | Freelance Web Developer" />
+    <meta name="twitter:description" content="I'm Joe, a freelance web developer specializing in fast, accessible, and modern websites. Explore my portfolio and recent projects." />
+    <meta name="twitter:image" content="./assets/og-image.jpg" />
 
-<!-- Other -->
-<meta name="robots" content="index, follow" />
-<meta name="theme-color" content="#9b5de5" />
-<link rel="canonical" href="https://www.joecapondesigns.com/" />
+    <!-- Other -->
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#9b5de5" />
+    <link rel="canonical" href="https://www.joecapondesigns.com/" />
 
-<!-- Structured Data -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Joe Capon",
-  "url": "https://www.joecapondesigns.com",
-  "jobTitle": "Freelance Web Developer",
-  "sameAs": [
-    "https://www.linkedin.com/in/joe-capon",
-    "https://www.instagram.com/joecapondesigns",
-    "mailto:joecapon101@gmail.com"
-  ]
-}
-</script>
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Joe Capon",
+      "url": "https://www.joecapondesigns.com",
+      "jobTitle": "Freelance Web Developer",
+      "sameAs": [
+        "https://www.linkedin.com/in/joe-capon",
+        "https://www.instagram.com/joecapondesigns",
+        "mailto:joecapon101@gmail.com"
+      ]
+    }
+    </script>
 
   </head>
 
